# auction_robot

./: CMakeLists.txt  README.md  REARME.md  package.xml  setup.py
action/: Coordination_Destination.action
config/: auction_robot.rviz  coordination_robot.rviz
launch/: auction_control.launch  auction_environment.launch  coordination_control.launch  coordination_environment.launch  robot_load.launch  waypoint_send.launch
models/square/: model.sdf
msg/: Waypoint_init.msg
nodes/: auction_robot  coordination_robot  tf_broadcastor  waypoint_send
param/: waypoints_1.yaml  waypoints_3.yaml  waypoints_4.yaml  waypoints_5.yaml  waypoints_6.yaml
report/: report.md
src/auction_robot_pkg/: auction_robot_auctioneer.py  auction_robot_bidder.py  auction_robot_super.py  aux_function.py
src/coordination_robot/: coordination_robot.py  coordination_robot_follower.py  coordination_robot_leader.py
src/coordination_robot_pkg/: aux_function.py  coordination_robot_follower.py  coordination_robot_leader.py  coordination_robot_super.py
srv/: ServiceRegistration.srv
